@@ -265,6 +265,9 @@ FolderTable.TodayDateFormat=HH:mm
 FolderTable.ThisWeekDateFormat=EEE HH:mm
 FolderTable.DefaultDateFormat=MM/dd/yy HH:mm
 
+NewMessage.customHeaders.header=Header
+NewMessage.customHeaders.value=Value
+
 button.ok=Ok
 button.cancel=Cancel
 
